force-app/main/default/objects/Queue_Transfer__c.object
<CustomObject>
    <description>Tracks transfers between queues.</description>
    <label>Queue Transfer</label>
    <nameField>
        <displayFormat>QT-{0000000}</displayFormat>
        <label>Transfer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queue Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>From_Queue__c</fullName>
        <label>From Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Queue__c</fullName>
        <label>To Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Time__c</fullName>
        <label>Transfer Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Queue_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Queue Transfers</relationshipLabel>
        <relationshipName>Queue_Transfers</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>